# optimo_ros

./: .clang-format  .gitignore  ARCHITECTURE.md  CHANGELOG.md  HCRL_Optimo_Software_Maintence.md  INSTALLATION.md  NOTES.md  README.md  plan.md
antero_gripper/: package.xml  setup.cfg  setup.py
antero_gripper/antero_gripper/: antero_gripper_node.py  canusb.py
antero_gripper/launch/: antero_gripper.launch.py
optimo_api/: CMakeLists.txt  package.xml
optimo_api/OR7_config_backup/: O7R0006-1738946871_config.yml  OR0003-1738945376_config.yml
optimo_api/cmake/: FindEtherCAT.cmake  FindYaml.cmake
optimo_api/include/optimo_api/: CalibrationCallback.h  CalibrationConstants.h  CallbackCommander.h  Controller.h  EEServoCallback.h  FreeMotionCallback.h  IO.h  IdleCallback.h  JogCallback.h  JointTrajectoryCallback.h  MoveHomeCallback.h  MoveItCallback.h  MoveItInterface.h  MoveItServoCallback.h  PlayTrajCallback.h  ROSShared.h  RecordCalibrationCallback.h  ServoCallback.h  ServoFbCallback.h  Shared.h  Task.h  TeachCallback.h
optimo_api/src/: CalibrationCallback.cpp  CallbackCommander.cpp  Controller.cpp  EEServoCallback.cpp  FreeMotionCallback.cpp  IdleCallback.cpp  JogCallback.cpp  JointTrajectoryCallback.cpp  MoveHomeCallback.cpp  MoveItCallback.cpp  MoveItInterface.cpp  MoveItServoCallback.cpp  PlayTrajCallback.cpp  RecordCalibrationCallback.cpp  ServoCallback.cpp  ServoFbCallback.cpp  Task.cpp  TeachCallback.cpp
optimo_bringup/: CMakeLists.txt  package.xml
optimo_bringup/config/: controllers.yaml
optimo_bringup/launch/: control.launch.py  gz.launch.py  optimo.launch.py
optimo_controllers/: CMakeLists.txt  optimo_controllers.xml  package.xml
optimo_controllers/include/optimo_controllers/: GripperKeyboard.h  OptimoEffortController.h
optimo_controllers/src/: GripperKeyboard.cpp  OptimoEffortController.cpp
optimo_description/: CMakeLists.txt  package.xml
optimo_description/config/: urdf.rviz
optimo_description/launch/: rviz.launch.py  rviz_rsp.launch.py
optimo_description/urdf/: camera_world.sdf  hand.xacro  optimo.common.xacro  optimo.ros2_control.xacro  optimo.urdf.xacro  optimo.xacro
optimo_hardware/: CMakeLists.txt  optimo_hardware.xml  package.xml
optimo_hardware/include/optimo_hardware/: GripperHardwareInterface.h  OptimoHardwareInterface.h
optimo_hardware/src/: GripperHardwareInterface.cpp  OptimoHardwareInterface.cpp
optimo_human_perception/: package.xml  setup.cfg  setup.py
optimo_human_perception/launch/: human_perception.launch.py
optimo_human_perception/optimo_human_perception/: human_perception_node.py
optimo_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
optimo_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  optimo.ros2_control.xacro  optimo.srdf  ros2_controllers.yaml  servo.yaml
optimo_moveit_config/launch/: demo.launch.py  move_group.launch.py  move_group_servo.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
optimo_moveit_config/src/: Keyboard.cpp
optimo_msgs/: CMakeLists.txt  package.xml
optimo_msgs/msg/: ImpedanceParams.msg  PoseElbow.msg  TrajectoryGoal.msg  TrajectoryParams.msg
optimo_msgs/srv/: JointTrajectoryCb.srv  MoveitCb.srv  PlayTrajCb.srv  PosCb.srv  ServoCb.srv  StringCb.srv
optimo_quick_start_app/: CMakeLists.txt  package.xml
optimo_quick_start_app/include/optimo_quick_start_app/core/: main_window.hpp  optimo_quick_start_node.hpp  session.hpp
optimo_quick_start_app/include/optimo_quick_start_app/style/: util.hpp
optimo_quick_start_app/include/optimo_quick_start_app/views/: debug_panel.hpp  jog_panel.hpp  traj_panel.hpp
optimo_quick_start_app/launch/: optimo_quick_start_app.launch.py
optimo_quick_start_app/src/: optimo_quick_start_app.cpp
optimo_quick_start_app/src/core/: main_window.cpp  optimo_quick_start_node.cpp  session.cpp
optimo_quick_start_app/src/style/: util.cpp
optimo_quick_start_app/src/views/: debug_panel.cpp  jog_panel.cpp  traj_panel.cpp
optimo_ros/: CMakeLists.txt  package.xml
optimo_safety_monitor/: CMakeLists.txt  package.xml
optimo_safety_monitor/baselines/: baseline.csv
optimo_safety_monitor/include/optimo_safety_monitor/: safety_monitor_node.hpp
optimo_safety_monitor/launch/: safety_monitor.launch.py
optimo_safety_monitor/src/: safety_monitor_node.cpp
optimo_sim/: CMakeLists.txt  package.xml
optimo_sim/config/: OR7_sim_config.yml  OR7_sim_config_mount_left.yml  OR7_sim_config_mount_right.yml
optimo_sim/include/optimo_sim/: MechanicalStop.h
optimo_sim/src/: MechanicalStop.cpp
optimo_state_estimator/: CMakeLists.txt  package.xml
optimo_state_estimator/launch/: optimo_state_estimator.launch.py
optimo_state_estimator/rviz/: state_estimator.rviz
optimo_state_estimator/src/: state_estimator_node.cpp
optimo_teleop/: CMakeLists.txt  package.xml
optimo_teleop/include/optimo_teleop/: joint_teleop_node.hpp  twist_teleop_node.hpp
optimo_teleop/launch/: joint_teleop.launch.py  optimo_teleop.launch.py  spacemouse_teleop.launch.py
optimo_teleop/src/: joint_teleop_node.cpp  shutdown_handler.cpp  teleop_node.cpp  twist_teleop_node.cpp
optimo_teleop_hardware/: README.md  package.xml  setup.cfg  setup.py
optimo_teleop_hardware/launch/: spacemouse_teleop.launch.py
optimo_teleop_hardware/optimo_teleop_hardware/: __init__.py  spacemouse_hardware.py  spacemouse_twist.py
pipelines/scripts/: build-app.sh  parse_cppcheck.py  parse_gtest_annotations.py  parse_gtest_reports.py  prep_cppcheck_output.py  run-colcon-test.sh  run-cppcheck.sh
