<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>optimo_api</name>
  <version>0.0.14</version>
  <description>This package serves as a ROS wrapper for interfacing with the Optimo-specific Roboligent SDK libraries.</description>
  <maintainer email="support@roboligent.com">Roboligent</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>optimo_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>