<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>optimo_hardware</name>
  <version>0.0.14</version>
  <description>Contains the hardware interface for ROS control.</description>
  <maintainer email="support@roboligent.com">Roboligent</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>optimo_api</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>optimo_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>