<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>optimo_msgs</name>
  <version>0.0.14</version>
  <description>Contains actions, services and messages for Optimo ROS</description>
  <maintainer email="support@roboligent.com">Roboligent</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>