<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>optimo_quick_start_app</name>
  <version>0.0.14</version>
  <description>Optimo Quick Start App</description>
  <maintainer email="support@roboligent.com">Roboligent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>qtbase5-dev</depend>
  <depend>optimo_api</depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>