<?xml version="1.0"?>
<package format="3">
  <name>optimo_state_estimator</name>
  <version>0.0.1</version>
  <description>Compare Optimo end-effector poses from TF and the Roboligent model with RViz visualization.</description>
  <maintainer email="support@roboligent.com">Roboligent</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>optimo_api</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
